--- a/WpfApp1/View/LoginViwe.xaml
+++ b/WpfApp1/View/LoginViwe.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WpfApp1.View.LoginView"
+﻿<Window x:Class="WpfApp1.View.LoginViwe"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1.View"
         mc:Ignorable="d"
-        Title="LoginView" Height="550" Width="800"
+        Title="LoginViwe" Height="550" Width="800"
         WindowStyle="None"
         ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
@@ -15,12 +15,12 @@
 
     <Border CornerRadius="12">
         <Border.Background>
-            <ImageBrush ImageSource="/Imagen/compu.jpg"
-                        Stretch="None"/>
+            <ImageBrush ImageSource="/Imagen/window.jpg"/>
+            
         </Border.Background>
         <Border CornerRadius="10"
             BorderThickness="1"
-                Opacity="0.89">
+                Opacity="0.70">
             <Border.BorderBrush>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
                     <GradientStop Color="#462AD8" Offset="0"/>
@@ -133,7 +133,7 @@
                     <Image Source="/Imagen/upqroo.png"
                            Width="100" Height="100"/>
 
-                    <TextBlock Text="Aministrador"
+                    <TextBlock Text="USUARIO"
                                Foreground="White"
                                FontSize="25"
                                FontWeight="Medium"
@@ -269,6 +269,4 @@
 
         </Border>
     </Border>
-
-
 </Window>
