--- a/WpfApp1/View/LoginViwe.xaml
+++ b/WpfApp1/View/LoginViwe.xaml
@@ -15,7 +15,7 @@
 
     <Border CornerRadius="12">
         <Border.Background>
-            <ImageBrush ImageSource="/Imagen/window.jpg"/>
+            <ImageBrush ImageSource="/Imagen/usuario.jpg"/>
             
         </Border.Background>
         <Border CornerRadius="10"
@@ -130,8 +130,8 @@
                             Grid.Row="2"
                             Orientation="Vertical"
                             Margin="0,35,0,0">
-                    <Image Source="/Imagen/upqroo.png"
-                           Width="100" Height="100"/>
+                    <Image Source="/Imagen/icono user.png"
+                           Width="100" Height="90"/>
 
                     <TextBlock Text="USUARIO"
                                Foreground="White"
